# residual-anomaly-detector

./: README.md  dependencies-deploy.yaml  deploy.md  mkdocs.yml  setup.cfg  setup.py  structure.md
docs/: index.md
note/: dev-nb.ipynb
note/00-data/: starai-get-data.ipynb  starai-queries.ipynb
note/deploy/: conda.ipynb  docs.ipynb  pypi.ipynb
note/tutorial/: quickstart.ipynb
scripts/: conda-setup.sh
src/residual_anomaly_detector/: ResidualAnomalyDetector.py  __init__.py
src/residual_anomaly_detector/exps/: StarAiFlow.py
tests/: test_skeleton.py  travis_setup.sh
