[metadata]
name = residual-anomaly-detector
description = Anomaly Detector on the basic assumption that high residuals of surrogate models can be indicative of anomalous behavior
author = Elia vw
author-email = elia.vw@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/eliavw
project-urls = 
	Documentation = https://github.com/eliavw
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python
version = 0.0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	= src
install_requires = 
	numpy
	scipy
	pandas
	scikit-learn
python_requires = 
	>= 3.6

[options.packages.find]
where = 
	src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest

[test]
extras = True

[tool:pytest]
addopts = 
	--verbose
norecursedirs = 
	dist
	build
testpaths = 
	tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

